[package]
name = "evdev_manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "evdev_manager"
# "cdylib" is necessary to produce a C-style dynamic library that can be loaded by Android's JNI.
crate-type = ["cdylib"]

[profile.dev]
debug = true
strip = false  # Don't strip symbols, keeps them in the .so file

[dependencies]
jni = "0.21.1"
log = "0.4.28"
android_log = "0.1.3"
nix = { version = "0.30.1", features = ["event", "dir"] }

[build-dependencies]
cc = "1.2.46"
bindgen = "0.72.1"