[package]
name = "evdev_manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "evdev_manager"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
log = "0.4.28"
android_log = "0.1.3"
evdev = { path = "../../evdev" }
evdev_manager_core = { path = "../core" }

[build-dependencies]
cc = "1.2.46"
